--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.cognizant</groupId>
   <artifactId>calculator</artifactId>
   <version>1.0.0</version>
+  <packaging>pom</packaging>
 
   <name>Calculator</name>
 
